--- a/themes/default/partials/news.htm
+++ b/themes/default/partials/news.htm
@@ -18,8 +18,12 @@
   
 <div class="publis">
 {% for new in news %}
+	{% set dated = new.viewBag.date|split(' ')[0] %}
+	{% set datef = dated|split('-') %}
     <div class='contpbl'>
       <div class="bimage" style="background-image:url({{new.viewBag.urlImage}}); background-repeat: no-repeat; background-size: cover;">
+        <span class='newDate reportDatemrm'>{{new.viewBag.diario}} | {{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+        <h6 class="publi-title h6mrm">{{new.viewBag.title}}</h6>
         <div class="links-container">                  
           {% if new.viewBag.urlExternaZip !='' %}
             <a class="download-link" target="_blank" href='{{new.viewBag.urlExternaZip}}''>{{'Descargar pdf'|_}}</a>
@@ -32,14 +36,21 @@
       <div class="shr">
       	<img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
       </div>	     
-      <div class="publicacion">
-      		{% set dated = new.viewBag.date|split(' ')[0] %}
-			{% set datef = dated|split('-') %}
+      <div class="publicacion">      		
 			<span class='newDate reportDatem'>{{new.viewBag.diario}} | {{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
           <h6 class="publi-title h6m">{{new.viewBag.title}}</h6>
           <div>      
         	<p class="publi-desc">{{new.viewBag.descrptn}}</p>
+        	<p class="publi-descm">{{new.viewBag.descrptn|length > 100 ? new.viewBag.descrptn|slice(0, 101) ~ '...' : new.viewBag.descrptn}}</p>
       	  </div>
+      	   <div class="links-containerm">  
+	          {% if new.viewBag.urlExternaZip !='' %}
+	            <a class="download-link" target="_blank" href='{{new.viewBag.urlExternaZip}}''>{{'Descargar pdf'|_}}</a>
+	          {% endif %}
+	          {% if new.viewBag.urlExterna !='' %}
+	            <a class="download-link" target="_blank" href='{{new.viewBag.urlExterna }}''>{{'Ver noticia'|_}}</a>
+	          {% endif %}
+          </div>
       </div>
     </div>
 {% endfor %}
