mapa js para no pc ok

--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -5012,8 +5012,8 @@ p > br {
   height: 472px;
 }
 
-.mapdossier .qdnm{
-  display: none;
+.cntdossier .qdnm{
+  display: none!important;
 }
 
 .mapdossier span{
