--- a/themes/default/layouts/prensa.htm
+++ b/themes/default/layouts/prensa.htm
@@ -287,6 +287,65 @@ code = "redes-sociales"
                 <img class="mapsline" src="{{preurl}}/storage/app/media/uploaded-files/templates/mapsline.svg" alt="">
                 <span class="stitle">Descubre qué se dice de Cádiz alrededor del mundo.</span>
         </div>
+        <div class="mapdossiermv">
+            <div id='spmv1' class="spmv">
+                <span>América del norte <div></div></span>
+                <div class="listps">
+                    <a href="{{preurl}}/sala-prensa/prensa/canada">Canadá</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/estados_unidos">Estados Unidos</a>
+                </div>
+            </div>
+            <div id='spmv2' class="spmv">
+                <span>América del sur <div></div></span>
+                <div class="listps">
+                    <a href="{{preurl}}/sala-prensa/prensa/argentina">Argentina</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/brasil">Brasil</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/costa_rica">Costa Rica</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/mexico">México</a>                
+                </div>
+            </div>
+            <div id='spmv3' class="spmv">
+                <span>Asia <div></div></span>
+                <div class="listps">
+                    <a href="{{preurl}}/sala-prensa/prensa/china">China</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/israel">Israel</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/japon">Japón</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/rusia">Rusia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/singapur">Singapur</a>    
+                </div>
+            </div>
+            <div id='spmv4' class="spmv">
+                <span>Europa <div></div></span>
+                <div class="listps">
+                    <a href="{{preurl}}/sala-prensa/prensa/alemania">Alemania</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/austria">Austria</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/belgica">Bélgica</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/dinamarca">Dinamarca</a>    
+                    <a href="{{preurl}}/sala-prensa/prensa/españa">España</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/estonia">Estonia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/finlandia">Finlandia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/francia">Francia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/holanda">Holanda</a>    
+                    <a href="{{preurl}}/sala-prensa/prensa/hungría">Hungría</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/irlanda">Irlanda</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/italia">Italia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/noruega">Noruega</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/polonia">Polonia</a>    
+                    <a href="{{preurl}}/sala-prensa/prensa/portugal">Portugal</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/reino_unido">Reino Unido</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/republica">República Checa</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/suecia">Suecia</a>
+                    <a href="{{preurl}}/sala-prensa/prensa/suiza">Suiza</a>    
+                    <a href="{{preurl}}/sala-prensa/prensa/ucrania">Ucrania</a>
+                </div>
+            </div>
+            <div id='spmv5' class="spmv">
+                <span>Oceanía <div></div></span>
+                <div class="listps">
+                    <a href="{{preurl}}/sala-prensa/prensa/australia">Australia</a>
+                </div>
+            </div>
+        </div>
     </div> 
     </div>
     {% component 'staticPage' %}
