--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -45,8 +45,18 @@
           <div class="contplangs">
             <span>{{publication.viewBag.idiomas|replace({ ',': ', '})}}</span>
           </div>
-       
-        <p class="publi-desc">{{publication.viewBag.descrptn}}</p>
+        
+        <p class="publi-desc publi-descn">{{publication.viewBag.descrptn}}</p>
+        <p class="publi-desc publi-descm">{{publication.viewBag.descrptn|length > 90 ? publication.viewBag.descrptn|slice(0, 91) ~ '...' : publication.viewBag.descrptn}}</p>
+
+        <div class="links-container-m">                  
+          {% if publication.viewBag.urlExternaZip !='' %}
+            <a class="download-link" target="_blank" href="{{publication.viewBag.urlExternaZip}}">{{'Descargar'|_}}</a>
+          {% endif %}
+           {% if publication.viewBag.urlExternaVideo !='' %}
+            <a class="see-link" target="_blank" href="{{publication.viewBag.urlExternaVideo}}">{{'Ver'|_}} {{publication.viewBag.type|_}}</a>
+          {% endif %}
+        </div>
        
           
       </div>
