--- a/themes/default/partials/allreports.htm
+++ b/themes/default/partials/allreports.htm
@@ -19,18 +19,20 @@
 {% for report in reports %}
     {% set dated = report.viewBag.dateReportaje|split(' ')[0] %}
     {% set datef = dated|split('-') %}
+    {% set cvimg = report.viewBag.cover|replace({' ':'%20'}) %}
     <div class='contpbl'>
-      <div class="bimage" style="background-image:url({{report.viewBag.cover}}); background-repeat: no-repeat; background-size: cover;">
+      <div class="bimage" style="background-image:url({{cvimg}}); background-repeat: no-repeat; background-size: cover;">
         <span class='reportDate reportDatemrm'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
         <h6 class="publi-title h6mrm">{{report.viewBag.title}}</h6>
-        <img class="imgrpmv" src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow2.png" alt="">
+        <img class="imgrpmv" src="{{preurl}}/storage/app/media/uploaded-files/templates/reportlineyellow2.png" alt="">
         <div class="links-container">  
             <a class="download-link" href='{{preurl~"/"~lang~report.viewBag.url}}''>{{'Ver reportaje'|_}}</a>
       	</div>
       </div>
       <div class="shr">
         <img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
-      </div>	     
+      </div>
+      <div class='OvalHReportM'></div>
       <div class="publicacion">      	
 			    <span class='reportDate reportDatem'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
           <h6 class="publi-title h6m">{{report.viewBag.title}}</h6>
