--- a/themes/default/partials/news.htm
+++ b/themes/default/partials/news.htm
@@ -35,8 +35,10 @@
       </div>
       <div class="shr">
       	<img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
-      </div>	     
-      <div class="publicacion">      		
+      </div>
+
+      <div class="publicacion"> 
+      <div class='OvalHNew'></div>     		
 			<span class='newDate reportDatem'>{{new.viewBag.diario}} | {{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
           <h6 class="publi-title h6m">{{new.viewBag.title}}</h6>
           <div>      
