--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -6046,6 +6046,11 @@ span.reportDatem {
   .publi-descm{
     display: block!important;
   }
+    #prtlReports .publicacion .links-containerm .download-link {
+      font-size: 14px!important;
+      padding-top: 15px;
+    }
+
 }
 
 /*-----------*/
