--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -6086,6 +6086,7 @@ span.reportDatem {
   opacity: 0.14;
   top:363px;
   left: 0; 
+  transform: rotate(180deg);
 }
 
 .OvalHNew{
@@ -6121,4 +6122,31 @@ span.reportDatem {
     .header-general.header-playas .header-txt .brush {
         margin-top: -185px !important;
     }
+  }
+
+  .plantillaReportajes h1 {
+    width: 90%!important;
+  }
+
+  .rprInfCont{
+    z-index: 10;
+  }
+
+  .rprtc6.rpart1:after, .rprtc2.rpart1:after, .rprtc3.rpart1:after{
+    content: "";
+    position: absolute;
+    background: linear-gradient(-180deg, rgba(107,97,119,0.00) 0%, #101010 100%);
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .rprtc4:after, .rprtc1:after{
+    content: "";
+    position: absolute;
+    background: linear-gradient(-180deg, rgba(107,97,119,0.00) 0%, #101010 100%);
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    top:0;
   }
