error anterior no link rrss en contacto

--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -29,6 +29,7 @@ code = "redes-sociales"
     function onStart()
     {
 
+        $this['home'] = $this->staticApp->getHomeVars();
 
         $this['lang']=\App::getLocale();
 
