--- a/themes/default/layouts/defaultnc.htm
+++ b/themes/default/layouts/defaultnc.htm
@@ -30,6 +30,7 @@ code = "redes-sociales"
 
     function onStart()
     {
+        $this['home'] = $this->staticApp->getHomeVars();
         $this['lang']=\App::getLocale();
         if($this['lang']==''){
             $this['lang']='es';
