mail experiences -> dataexperience

--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -148,8 +148,8 @@ layout = "free"
                             <tr>
                                 <td align="left" valign="top">
                                     <div class="logo" style="margin-top: 120px; margin-bottom: 30px;">
-                                        <a href="{{experience.urlApp}}">
-                                        <img style="margin: 36px 0px 0px 40px;" class="element0" src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
+                                        <a href="{{dataexperience.urlApp}}">
+                                        <img style="margin: 36px 0px 0px 40px;" class="element0" src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/cadiz-logo.jpg" alt="">
                                         </a>
                                     </div>
                                 </td>
@@ -165,7 +165,7 @@ layout = "free"
             <table class="img-container" role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                 <tr>
                     <td align="center" valign="top" >
-                      <img style="width: 100%; max-width: 600px;" src="{{experience.urlApp}}{{experience.cover}}"/>
+                      <img style="width: 100%; max-width: 600px;" src="{{dataexperience.urlApp}}{{dataexperience.cover}}"/>
                     </td>
                 </tr>
             </table>
@@ -180,7 +180,7 @@ layout = "free"
                         <table role="panel" width="600" cellspacing="0" cellpadding="0" border="0" align="center" style="max-width:600px; width:100%;">
                             <tr>
                                 <td width="300" align="center" valign="top" style="padding:10px;">
-                                    <h2 style="text-align:center; margin-bottom: 22px; margin-top: 24px; font-size: 26px; font-weight: bold; color: #4A4A4A; letter-spacing: 0; width: 90%; max-width: 380px;">{{'Aquí tienes tu experiencia de'|_}} “{{experience.title}}”</h2>
+                                    <h2 style="text-align:center; margin-bottom: 22px; margin-top: 24px; font-size: 26px; font-weight: bold; color: #4A4A4A; letter-spacing: 0; width: 90%; max-width: 380px;">{{'Aquí tienes tu experiencia de'|_}} “{{dataexperience.title}}”</h2>
                                     <p style="max-width: 353px;text-align:center; font-size: 14px; color: #9B9B9B; letter-spacing: 0; line-height: 20px; font-weight: 300; width: 90%; max-width: 360px;">{{'Te hemos adjuntado un pdf, descárgalo y lleva siempre contigo tu experiencia, te ayudará a planificar mejor tu viaje y a que descubras lo mejor de Cádiz.'|_}}</p>
                                 </td>
                             </tr>
@@ -203,38 +203,38 @@ layout = "free"
                                     <tr>
                                       <td>
                                         <p style="display: inline-block;">
-                                            <a href="https://www.facebook.com/CadizTurismo"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
+                                            <a href="https://www.facebook.com/CadizTurismo"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
                                         </p>
                                       </td>
                                         <td>
                                           <p style="display: inline-block;">
-                                              <a href="https://twitter.com/CadizTurismo"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/twitter-icon.jpg" alt="cadiz-twitter"></a>
+                                              <a href="https://twitter.com/CadizTurismo"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/twitter-icon.jpg" alt="cadiz-twitter"></a>
                                           </p>
                                         </td>
                                         <td>
                                           <p style="display: inline-block;">
-                                              <a href="https://www.youtube.com/profile?gl=US&user=PatProvTurCadiz"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/youtube-icon.jpg"  alt="cadiz-youtube"></a>
+                                              <a href="https://www.youtube.com/profile?gl=US&user=PatProvTurCadiz"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/youtube-icon.jpg"  alt="cadiz-youtube"></a>
                                           </p>
                                         </td>
                                         <td>
                                           <p style="display: inline-block;">
-                                              <a href="https://www.instagram.com/cadizturismo/"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/instagram-icon.jpg"  alt="cadiz-instagram"></a>
+                                              <a href="https://www.instagram.com/cadizturismo/"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/instagram-icon.jpg"  alt="cadiz-instagram"></a>
                                           </p>
                                         </td>
                                         <td>
                                           <p style="display: inline-block;">
-                                              <a href="https://plus.google.com/+CadizTurismo_Provincia"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/google-plus-icon.jpg"  alt="cadiz-google"></a>
+                                              <a href="https://plus.google.com/+CadizTurismo_Provincia"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/google-plus-icon.jpg"  alt="cadiz-google"></a>
                                           </p>
                                         </td>
                                         <td>
                                           <p style="display: inline-block;">
-                                              <a href="https://www.pinterest.es/cadizturismo/"><img src="{{experience.urlApp}}storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
+                                              <a href="https://www.pinterest.es/cadizturismo/"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/pinterest-icon.jpg"  alt="cadiz-pinterest"></a>
                                           </p>
                                         </td>
                                     </tr>
                                   </table>
                                     <div class="social" style="display: inline-block; margin-top: 15px;">
-                                        <span class="ask" style="margin-bottom: 80px; display: block; color: #CECECE; text-decoration: none; font-size: 12px;"> <a href="{{experience.urlApp}}es/contacto" style="color: #CECECE; text-decoration: none; font-size: 12px;"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
+                                        <span class="ask" style="margin-bottom: 80px; display: block; color: #CECECE; text-decoration: none; font-size: 12px;"> <a href="{{dataexperience.urlApp}}es/contacto" style="color: #CECECE; text-decoration: none; font-size: 12px;"><b>{{'¿Dudas o preguntas?'|_}}</b></a></span>
                                     </div>
                                 </td>
                             </tr>
