--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -181,6 +181,8 @@ layout = "free"
                             <tr>
                                 <td width="300" align="center" valign="top" style="padding:10px;">
                                     <h2 style="text-align:center; margin-bottom: 22px; margin-top: 24px; font-size: 26px; font-weight: bold; color: #4A4A4A; letter-spacing: 0; width: 90%; max-width: 380px;">{{'Aquí tienes tu experiencia de'|_}} “{{dataexperience.title}}”</h2>
+                                    <p>-{{dataexperience['urlApp']}}-</p>
+                                    <p>-{{dataexperience.urlApp}}-</p>
                                     <p style="max-width: 353px;text-align:center; font-size: 14px; color: #9B9B9B; letter-spacing: 0; line-height: 20px; font-weight: 300; width: 90%; max-width: 360px;">{{'Te hemos adjuntado un pdf, descárgalo y lleva siempre contigo tu experiencia, te ayudará a planificar mejor tu viaje y a que descubras lo mejor de Cádiz.'|_}}</p>
                                 </td>
                             </tr>
@@ -203,7 +205,7 @@ layout = "free"
                                     <tr>
                                       <td>
                                         <p style="display: inline-block;">
-                                            <a href="https://www.facebook.com/CadizTurismo"><img src="{{dataexperience['urlApp']}}storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
+                                            <a href="https://www.facebook.com/CadizTurismo"><img src="{{dataexperience.urlApp}}storage/app/media/uploaded-files/templates/facebook-icon.jpg" alt="cadiz-facebook"></a>
                                         </p>
                                       </td>
                                         <td>
