--- a/plugins/rainlab/pages/views/mail/experience.htm
+++ b/plugins/rainlab/pages/views/mail/experience.htm
@@ -183,6 +183,8 @@ layout = "free"
                                     <h2 style="text-align:center; margin-bottom: 22px; margin-top: 24px; font-size: 26px; font-weight: bold; color: #4A4A4A; letter-spacing: 0; width: 90%; max-width: 380px;">{{'Aquí tienes tu experiencia de'|_}} “{{dataexperience.title}}”</h2>
                                     <p>-{{dataexperience['urlApp']}}-</p>
                                     <p>-{{dataexperience.urlApp}}-</p>
+                                    <p>-{{experience['urlApp']}}-</p>
+                                    <p>-{{experience.urlApp}}-</p>
                                     <p style="max-width: 353px;text-align:center; font-size: 14px; color: #9B9B9B; letter-spacing: 0; line-height: 20px; font-weight: 300; width: 90%; max-width: 360px;">{{'Te hemos adjuntado un pdf, descárgalo y lleva siempre contigo tu experiencia, te ayudará a planificar mejor tu viaje y a que descubras lo mejor de Cádiz.'|_}}</p>
                                 </td>
                             </tr>
