--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -153,14 +153,14 @@ code = "redes-sociales"
 
     </div>
 </div>
-</div>
-    
+</div>   
     
 
     {% component 'staticPage' %}
+    {% partial "mapbeaches" %}  
 
     <div id='prtlBeaches' class="all-events">       
-        <div class="all-events-container">            
+        <div class="all-events-container">
         <!--{% partial "beaches" %} -->
         </div>
     </div>
